--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
 /*Elements*/
 body {
   font-family: Arial, sans-serif;
-  background-color: #4545ff;
-  color: #333;
+  background-color: #333;
+  color: white;
   font-family: "Indie Flower", serif;
 }
 
 header {
-  background-color: #00008b;
+  background-color: #141414;
   padding: 10px 0;
   font-family: "Nothing You Could Do", serif;
 }
@@ -174,100 +174,9 @@ section {
   font-style: normal;
 }
 
-.slider {
-  width: 100%; 
-  height: var(--height);
-  overflow: hidden;
-  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
-}
-
-.slider .covers{
-  display: flex;
-  width: 100%;
-  min-width: calc(var(--width) * var(--quantity));
-  position: relative;
-}
-
-.slider .covers .item{
-  width: var(--width);
-  height: var(--height);
-  position: absolute;
-  left: 100%;
-  animation: autoRun 10s linear infinite;
-  transition: filter 0.5s;
-  animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
-}
-
-.slider .covers .item img{
-  width: 100%;
-  border: 5px solid #7373ff;
-  border-radius: 100%;
-}
-
-.slider:hover .item{
-  animation-play-state: paused!important;
-  filter: grayscale(1);
-}
-
-.slider .item:hover{
-  filter: grayscale(0);
-}
-
-.slider[reverse="true"] .item{
-  animation: reversePlay 10s linear infinite;
-}
-
 .list {
   list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes grow {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.1);
-  }
-}
-
-@keyframes ungrow {
-  0% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes autoRun{
-  from {
-    left: 100%;
-  } 
-  to {
-    left: calc(var(--width) * -1);
-  }
-}
-
-@keyframes reversePlay{
-  from {
-    left: calc(var(--width) * -1);
-  }
-  to {
-    left: 100%;
-  }
 }
