--- a/style.css
+++ b/style.css
@@ -3,20 +3,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: white;
   list-style: none;
+  color: white;
 }
 /*Elements*/
 body {
   font-family: Arial, sans-serif;
   background-color: #333;
-  color: white;
   font-family: "Indie Flower", serif;
 }
 
 header {
   background-color: #141414;
-  padding: 10px 0;
+  padding: 5px 0;
   font-family: "Nothing You Could Do", serif;
 }
 
@@ -31,7 +30,6 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
   text-decoration: none;
   font-size: 18px;
 }
@@ -83,13 +81,12 @@ h2 {
 }
 
 footer {
-  background-color: darkblue;
-  color: white;
+  background-color: #141414;
   text-align: center;
   padding: 20px 0;
   left: 0;
   bottom: 0;
-  position: sticky;
+  position: absolute;
   width: 100%;
 }
 
