--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #333;
   font-family: "Indie Flower", serif;
+  height: 100vh;
 }
 
 header {
@@ -86,7 +87,7 @@ footer {
   padding: 20px 0;
   left: 0;
   bottom: 0;
-  position: absolute;
+  position: sticky;
   width: 100%;
 }
 
@@ -176,4 +177,9 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.representation {
+  display: flex;
+  flex-direction: row;
 }
