--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #333;
   font-family: "Indie Flower", serif;
-  height: 100vh;
+  height: 100%;
 }
 
 header {
@@ -87,7 +87,7 @@ footer {
   padding: 20px 0;
   left: 0;
   bottom: 0;
-  position: sticky;
+  position: absolute;
   width: 100%;
 }
 
@@ -182,5 +182,12 @@ section {
 .representation {
   display: flex;
   flex-direction: row;
+  flex: 5;
+}
+
+#representationImage {
+  flex: 5;
+}
+#representationText {
   flex: 5;
 }
