--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #333;
   font-family: "Indie Flower", serif;
-  height: 100%;
+  height: 100vh;
 }
 
 header {
@@ -201,4 +201,23 @@ html, body {
 main {
   min-height: 100%;
   position: relative;
+}
+
+body {
+  /* start body required properties */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  /* end body required properties */
+  margin: 0;
+}
+main {
+  /* start main required properties */
+  flex-grow: 1;
+  /* end main required properties */
+  padding: 12px;
+}
+footer {
+  background-color: #ccc;
+  padding: 12px;
 }
