--- a/style.css
+++ b/style.css
@@ -1,167 +1,42 @@
-/*Unviseral*/
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
   color: white;
 }
-/*Elements*/
+
 body {
-  font-family: Arial, sans-serif;
   background-color: #333;
   font-family: "Indie Flower", serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
-header {
-  background-color: #141414;
-  padding: 10px 0;
-  font-family: "Nothing You Could Do", serif;
-}
-
-nav ul {
-  list-style-type: none;
-  text-align:  center;
-}
-
-nav ul li {
-  display: inline;
-  margin: 0 10px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  font-size: 20px;
-}
-
-ul li {
-  margin: 10px 0;
-}
-
-li:nth-child(odd) {
-  text-align: left;
-}
-
-li:nth-child(odd):hover {
-  animation: real 12.5s infinite linear;
-  @keyframes real {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(180deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-}
-
-a:hover{
-  color: purple;
-}
-li:nth-child(odd):hover {
-  transform: rotate(0.72deg)
-}
-li:nth-child(even) {
-  text-align: right;
-}
-
-li:nth-child(even):hover {
-  transform: rotate(-0.72deg)
-}
-h1 {
-  font-size: 3em;
-  text-align: center;
-}
-
-h2 {
-  font-size: 2em;
-  margin-bottom: 20px;
-}
-
-footer {
+nav{
   background-color: #141414;
   text-align: center;
-  padding: 20px 0;
+  top: 0;
   left: 0;
   position: absolute;
-  bottom: 0;
+  width: 100%;
+  height: 80px;
+}
+
+footer{
+  background-color: #141414;
+  text-align: center;
+  bottom: -1;
+  left: 0;
+  position: absolute;
   width: 100%;
 }
 
-section {
-  padding: 20px;
-  margin: 20px;
+nav a {
+  margin: 0 5px;
+  text-decoration: none;
+  font-family: "Nothing You Could Do", serif;
+  font-size: 123%;
 }
 
-/*Ids*/
-#blur {
-  filter: blur(3.5px)
+a:hover{
+  color: green;
 }
 
-#hero {
-  background-color: #222;
-  padding: 50px 0;
-  text-align: center;
-}
-
-#album {
-  display: flex;
-  background-color: #a2a2ff;
-  flex-direction: column;
-  align-items: space-between;
-  border: 5px solid #7373ff;
-  width: fit-content;
-  text-align: center;
-  img {
-    height: 400px;
-    border-radius: 10%;
-  }
-  img:hover {
-    animation: grow 1s forwards linear;
-  }
-  :not(img:hover) {
-    animation: ungrow 1s forwards linear;
-  }
-}
-
-#albums {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-#details {
-  display: flex;
-  flex-direction: column;
-  float: right;
-}
-
-#song{
-  display: flex;
-  justify-content: space-around;
-  background-color: #a2a2ff;
-  width: 75%;
-  align-items: center;
-  border: 5px solid #7373ff;
-  border-radius: 100px;
-}
-
-#musicImage {
-  border: 5px solid #7373ff;
-  border-radius: 100%;
-  animation: rotate 12.5s infinite linear;
-  height: 250px;
-}
-#bio:hover {
- color: yellow;
-}
-/*Classes*/
 .nothing-you-could-do-regular {
   font-family: "Nothing You Could Do", serif;
   font-weight: 400;
@@ -174,35 +49,19 @@ section {
   font-style: normal;
 }
 
-.list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .representation {
   display: flex;
-  flex-direction: row;
-  width: 100vw;
+  align-content: space-between;
 }
 
-#representationImage {
+.representationImg {
   flex: 5;
-  width: 100%;
+  border-radius: 10%;
+  margin: 0 5px;
+  width: 100px;
 }
-#representationText {
+
+.representationP {
   flex: 5;
-  width: 100%;
-}
-
-html, body {
-  min-height: 100vh;
-}
-
-main {
-  min-height: 100%;
-  position: relative;
-  flex-grow: 1;
-  padding: 12px;
+  margin: 0 5px;
 }
