--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav{
   left: 0;
   position: absolute;
   width: 100%;
-  height: 80px;
+  height: fit-content;
 }
 
 footer{
@@ -22,8 +22,9 @@ footer{
   text-align: center;
   bottom: -1;
   left: 0;
-  position: absolute;
+  position: sticky;
   width: 100%;
+  height: fit-content;
 }
 
 nav a {
