--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ footer{
   text-align: center;
   bottom: -1;
   left: 0;
-  position: sticky;
+  position: absolute;
   width: 100%;
   height: fit-content;
 }
